--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: 'Jujutsu Kaisen';
   font-style: normal;
   font-weight: normal;
@@ -19,4 +19,4 @@
 
 .Jujutsu img {
   width: 50%;
-}
+} */
