--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,93 @@
 .header {
-  display: flex;
-  flex-direction: row;
-  position: absolute;
-  top: 0;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  padding: 0 1rem;
-  background-color: #3a4750;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background: #00000093;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    ;
+}
+
+.form {
+    display: inline-block;
+}
+
+.busqueda {
+    display: inline-block;
+    width: 300px;
+    padding: 10px 20px;
+    margin-right: 10px;
+}
+
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 20px;
+    background-color: rgb(166, 183, 131);
+    color: #fff;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+
+
+.logout {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 20px;
+    background-color: rgb(166, 183, 131);
+    color: #fff;
+    cursor: pointer;
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-bottom: 30px;
+}
+
+.user-profile {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 50%;
+    background-color: #ccc;
+    color: #fff;
+}
+
+.userprofile-container {
+    text-align: center;
 }
 
 .userprofile-img {
-  border-radius: 50%;
-  height: 75%;
-  width: auto;
-  max-height: 4rem;
-  margin-right: 1rem;
+    height: 3rem;
+    width: auto;
+    border-radius: 50%;
+}
+
+@media (max-width: 768px) {
+    .form,
+    .btn {
+        display: none;
+    }
+    .logout {
+        margin-right: 20px;
+    }
+}
+
+@media(max-width:1227px) {
+    .busqueda {
+        width: 150px;
+    }
+}
+
+@media(max-width:1078px) {
+    .busqueda {
+        width: 95px;
+    }
 }
