--- a/src/components/Videogames.css
+++ b/src/components/Videogames.css
@@ -4,27 +4,19 @@
   justify-content: center;
 } */
 
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  min-height: 100vh;
-  background-image: url(fondo.jpg);
-  background-size: cover;
-}
-
 main {
   width: 100%;
 }
 
 .image-container {
   position: relative;
-  max-width: 572px;
-  max-height: 452px;
+  max-width: 272px;
+  max-height: 152px;
   overflow: hidden;
 }
 
 .image-container img {
+
   width: 100%;
   aspect-ratio: 16 / 9;
   object-fit: cover;
@@ -53,38 +45,47 @@ main {
   text-align: center;
 }
 .videogames-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 1rem;
-  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.videogames-element {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.videogames-list li {
   text-align: center;
 }
 
-.videogames-element .image-container {
-  position: relative;
-  max-width: 572px;
-  max-height: 452px;
-  overflow: hidden;
-}
 
-.videogames-element .image-container img {
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
-  border-radius: 8px;
+.videogames-element {
+  text-align: center;
 }
 
 .videogames-element h3 {
   height: 90px;
+}
+.image-container {
+  position: relative;
+  max-width: 572px;
+  max-height: 452px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.slider-container {
+  max-width: 75%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider-image {
+  object-fit: contain;
+  max-width: 100%;
+  height: 100%;
+}
+
+.slider-image-container {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  min-height: 35vh;
 }
