--- a/src/index.css
+++ b/src/index.css
@@ -7,18 +7,29 @@
 }
 
 html {
-  font-family: 'Bubblegum Sans', sans-serif;
+  font-family: 'Oswald', sans-serif;
   font-size: 22px;
   color: #fff;
+  
 }
 
 body {
   min-height: 100vh;
   background-color: #3a4750;
+  background-image: url(fondo.jpg);
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 main {
   margin-top: 6rem;
+}
+
+.separator {
+  border: none;
+  border-left: 600px solid #ccc;
+  margin: 20px 0;
 }
 
 .App {
@@ -33,13 +44,13 @@ main {
 section {
   width: 100%;
   /* max-width: 420px; */
-  min-height: 400px;
+  min-height: 300px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding: 1rem;
-  background-color: rgba(0, 0, 0, 0.4);
   border-radius: 8px;
+  text-align: center;
 }
 
 form {
@@ -127,4 +138,10 @@ button {
 
 .login-section {
   max-width: 50vw;
+}
+
+footer {
+  color: #fff;
+  padding: 10px;
+  text-align: center;
 }
